2010-10-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #4272: Inconsistent return values of ini_get() produce false positives for safe_mode detection (Thanks to Peter Beernink)

2010-10-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16155: t3lib_db::INSERTquery misses a space when generering the INSERT INTO statement

2010-10-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15745: Integrate generic notification methods to show windows and dialogs based on ExtJS

2010-10-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16135: Output of superfluous "&qout;" in title of TCEform icon for record in group of type "db" (Thanks to Sven Juergens)

2010-10-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16148: htmlArea RTE: Missing cancel browser default after inserting character or emoticon

2010-10-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16122: Improve tooltip behaviour
	* Fixed bug #15094: Refactor of content objects of tslib_content

2010-10-27  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15503: Improve t3lib_userAuth::getCookie() (Thanks to Michael Bürgi)

2010-10-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15936: [Caching framework] Entry identifier needs to be sanitized in FileBackend

2010-10-25  Susanne Moog  <typo3@susanne-moog.de>

	* Reverted #16011: Incomplete implementation

2010-10-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16087: htmlArea RTE: Missing soft hyphen entity in CharacterMap
	* Added feature #16127: htmlArea RTE: Add quick tips in character map

2010-10-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16118: htmlArea RTE: cleanup/rewrite DOM to html rendering
	* Follow-up to feature #16118: htmlArea RTE: cleanup/rewrite DOM to html rendering

2010-10-23  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16110: stdWrap functions stop working as soon as there is one conditional function returning false (Thanks to Jo Hasenau)