@@ -1,0 +1,48 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2010 Marcus Krause <marcus#exp2010@t3sec.info>
+*           Steffen Kamper <info@sk-typo3.de>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+/**
+ * Module: Extension manager - connection exception
+ *
+ * $Id: class.em_connection_exception.php 1876 2010-02-18 23:23:13Z mkrause $
+ */
+
+/**
+ * Exception for internet connection handling.
+ *
+ * This exception is supposed to be thrown when
+ * there are problems with the internet connections
+ * initialized by the web server.
+ *
+ * @author      Marcus Krause <marcus#exp2010@t3sec.info>
+ * @author      Steffen Kamper <info@sk-typo3.de>
+ *
+ * @since       2010-02-18
+ * @package     TYPO3
+ * @subpackage  EM
+ */
+class em_connection_Exception extends Exception {
+
+}
+?>
