@@ -1,5 +1,6 @@
 2010-10-29  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Added feature #16137: [em] Task to update extension list
 	* Fixed bug #4272: Inconsistent return values of ini_get() produce false positives for safe_mode detection (Thanks to Peter Beernink)
 
 2010-10-29  Ernesto Baschny  <ernst@cron-it.de>
